--- a/web/package.json
+++ b/web/package.json
@@ -12,7 +12,10 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
     "axios": "^0.19.2",
+    "mdbreact": "^4.27.0",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
+    "react-bootstrap-navbar": "^1.1.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
